--- a/index.html
+++ b/index.html
@@ -5,10 +5,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Hannah Roe</title>
         <link rel="shortcut icon" href="css/img/favicon.ico">
-        <link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32" />
-        <link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16" />
+
         <!-- Compressed CSS -->
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.2.2/foundation.min.css">
+        <link rel="stylesheet" href="foundation/css/foundation.min.css">
         <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600" rel="stylesheet">
         <!--   Custom Css -->
         <link rel="stylesheet" type="text/css" href="css/stylesheets/custom.css">
@@ -16,76 +15,96 @@
     <body>
         <header>
             <nav role="navigation">
-                <a href="index.html"><img id="logo-img" src="css/img/better.svg" alt="Logo" /></a>
-                <ul class="menu">
-                    <li>
-                        <a class="menu-item" href="about.html">About</a>
-                    </li>
-                    <li>
-                        <a class="menu-item" href="portfolio.html">Portfolio</a>
-                    </li>
-                    <li>
-                        <a class="menu-item" href="contact.php">Contact</a>
-                    </li>
-                </ul>
+                    <a href="index.html"><img id="logo-img" src="css/img/better.svg" alt="Logo" /></a>
+                    <ul class="vertical medium-horizontal menu">
+                        <li>
+                            <a class="menu-item" href="index.html">Portfolio</a>
+                        </li>
+                        <li>
+                            <a class="menu-item" href="about.html">About</a>
+                        </li>
+                        <li>
+                            <a class="menu-item" href="contact.php">Contact</a>
+                        </li>
+                    </ul>
             </nav>
         </header>
         <main>
             <!-- Snippet at the top about me -->
-            <div class="row">
-                <p id="brief-p" class="small-12 medium-9 large-8 columns small-centered medium-centered large-centered">
+            <div id="brief-p" class="row">
+                <p class="small-12 medium-9 large-8 columns small-centered medium-centered large-centered">
                     Hannah Roe is a Web Developer in the Salt Lake City area.
                 </p>
             </div>
-            <div class="row">
-                <div class="small-up-2 medium-up-3 large-up-4">
+            <div id="block-container" class="row">
+                <div class="row small-up-1 medium-up-2 large-up-3">
+                    <!-- Work Block 1 -->
+                    <!-- Landing Page -->
                     <div class="column">
                         <div class="work-blocks">
-                            <img src="css/img/CoffeeShop.png" alt="One Page Website for a Madeup coffee shop" />
-                            <p class="work-hidden-p">
-                                Hello World!
-                            </p>
+                            <a href="#">
+                                <img class="work-img" src="css/img/Landing-page.png" alt="Mock up of a one page website and most recient" />
+                                <p class="work-hidden-p">
+                                    Landing Page Mockup
+                                </p>
+                                <p class="show-for-sr">
+                                    Landing Page Mockup
+                                </p>
+                            </a>
                         </div>
                     </div>
+                    <!-- Work Block 2 -->
+                    <!-- Old portfolio -->
                     <div class="column">
                         <div class="work-blocks">
-                            <img src="css/img/CoffeeShop.png" alt="One Page Website for a Madeup coffee shop" />
-                            <p class="work-hidden-p">
-                                Hello World!
-                            </p>
+                            <a href="#">
+                                <img class="work-img" id="portfolio-img" src="css/img/portfolio-v1.png" alt="My First Portfolio." />
+                                <p class="work-hidden-p">
+                                    Previous Portfolio
+                                </p>
+                                <p class="show-for-sr">
+                                    Previous Portfolio
+                                </p>
+                            </a>
                         </div>
                     </div>
+                    <!-- Work Block 3 -->
+                    <!-- Coffee shop -->
                     <div class="column">
                         <div class="work-blocks">
-                            <img src="css/img/CoffeeShop.png" alt="One Page Website for a Madeup coffee shop" />
-                            <p class="work-hidden-p">
-                                Hello World!
-                            </p>
+                            <a href="#">
+                                <img class="work-img" src="css/img/CoffeeShop.png" alt="My First Website I ever made." />
+                                <p class="work-hidden-p">
+                                    Coffee Shop Website
+                                </p>
+                                <p class="show-for-sr">
+                                    Coffee Shop Website
+                                </p>
+                            </a>
                         </div>
                     </div>
-                    <div class="column">
+                    <!-- Work Block 4 -->
+                    <!-- Weather app -->
+                    <div class="large-12 large-offset-4 column">
                         <div class="work-blocks">
-                            <img src="css/img/CoffeeShop.png" alt="One Page Website for a Madeup coffee shop" />
-                            <p class="work-hidden-p">
-                                Hello World!
-                            </p>
+                            <a href="#">
+                                <img class="work-img" src="css/img/weather-app.png" alt="Weather App Project" />
+                                <p class="work-hidden-p">
+                                    Weather App
+                                </p>
+                                <p class="show-for-sr">
+                                    Weather App
+                                </p>
+                            </a>
                         </div>
                     </div>
-                    <div class="column">
-                        <div class="work-blocks">
-                            <img src="css/img/CoffeeShop.png" alt="One Page Website for a Madeup coffee shop" />
-                            <p class="work-hidden-p">
-                                Hello World!
-                            </p>
-                        </div>
-                    </div>
+
                 </div>
 
             </div>
         </main>
         <!-- Javascript  -->
-        <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
-        <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.2.2/foundation.min.js"></script>
-        <script type="text/javascript" src="js/app.js"></script>
+        <script type="text/javascript" src="foundation/js/vendor/jquery.js"></script>
+        <script type="text/javascript" src="foundation/js/vendor/foundation.min.js"></script>
     </body>
 </html>
