changed the navigation a bit. Added links to pages

--- a/index.html
+++ b/index.html
@@ -14,8 +14,11 @@
     </head>
     <body>
         <header>
-            <nav role="navigation">
+            <nav role="navigation" class="row">
+                <div class="small-12 medium-6 large-3 columns">
                     <a href="index.html"><img id="logo-img" src="css/img/better.svg" alt="Logo" /></a>
+                </div>
+                <div class="small-12 medium-6 large-6 columns">
                     <ul class="vertical medium-horizontal menu">
                         <li>
                             <a class="menu-item" href="index.html">Portfolio</a>
@@ -27,6 +30,7 @@
                             <a class="menu-item" href="contact.php">Contact</a>
                         </li>
                     </ul>
+                </div>
             </nav>
         </header>
         <main>
@@ -42,7 +46,7 @@
                     <!-- Landing Page -->
                     <div class="column">
                         <div class="work-blocks">
-                            <a href="#">
+                            <a href="portfolio/landing-mockup.html">
                                 <img class="work-img" src="css/img/Landing-page.png" alt="Mock up of a one page website and most recient" />
                                 <p class="work-hidden-p">
                                     Landing Page Mockup
@@ -57,7 +61,7 @@
                     <!-- Old portfolio -->
                     <div class="column">
                         <div class="work-blocks">
-                            <a href="#">
+                            <a href="portfolio/prev-portfolio.html">
                                 <img class="work-img" id="portfolio-img" src="css/img/portfolio-v1.png" alt="My First Portfolio." />
                                 <p class="work-hidden-p">
                                     Previous Portfolio
@@ -72,7 +76,7 @@
                     <!-- Coffee shop -->
                     <div class="column">
                         <div class="work-blocks">
-                            <a href="#">
+                            <a href="portfolio/coffee-site.html">
                                 <img class="work-img" src="css/img/CoffeeShop.png" alt="My First Website I ever made." />
                                 <p class="work-hidden-p">
                                     Coffee Shop Website
@@ -87,7 +91,7 @@
                     <!-- Weather app -->
                     <div class="large-12 large-offset-4 column">
                         <div class="work-blocks">
-                            <a href="#">
+                            <a href="portfolio/weather-app.html">
                                 <img class="work-img" src="css/img/weather-app.png" alt="Weather App Project" />
                                 <p class="work-hidden-p">
                                     Weather App
