--- a/about.html
+++ b/about.html
@@ -14,8 +14,11 @@
     </head>
     <body>
         <header>
-            <nav role="navigation">
+            <nav role="navigation" class="row">
+                <div class="small-12 medium-6 large-3 columns">
                     <a href="index.html"><img id="logo-img" src="css/img/better.svg" alt="Logo" /></a>
+                </div>
+                <div class="small-12 medium-6 large-6 columns">
                     <ul class="vertical medium-horizontal menu">
                         <li>
                             <a class="menu-item" href="index.html">Portfolio</a>
@@ -27,6 +30,7 @@
                             <a class="menu-item" href="contact.php">Contact</a>
                         </li>
                     </ul>
+                </div>
             </nav>
         </header>
         <main class="row">
