--- a/portfolio/prev-portfolio.html
+++ b/portfolio/prev-portfolio.html
@@ -1,52 +1,71 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Hannah Roe</title>
-        <link rel="shortcut icon" href="../css/img/favicon.ico">
+<html lang="en">
 
-        <!-- Compressed CSS -->
-        <link rel="stylesheet" href="../foundation/css/foundation.min.css">
-        <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600" rel="stylesheet">
-        <!--   Custom Css -->
-        <link rel="stylesheet" type="text/css" href="../css/stylesheets/custom.css">
-    </head>
-    <body>
-        <header>
-            <nav role="navigation" class="row">
-                <div class="small-12 medium-6 large-3 columns">
-                    <a href="../index.html">
-                        <img id="logo-img" src="../css/img/better.svg" alt="Logo" />
-                    </a>
-                </div>
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Hannah Roe</title>
+    <link rel="shortcut icon" href="https://s3-us-west-2.amazonaws.com/portfolio-hannahdroe/Portfolio/favicon.ico">
 
-                <div class="small-12 medium-6 large-6 columns">
-                    <ul class="vertical medium-horizontal menu ">
-                        <li>
-                            <a class="menu-item" href="../index.html">Portfolio</a>
-                        </li>
-                        <li>
-                            <a class="menu-item" href="../about.html">About</a>
-                        </li>
-                        <li>
-                            <a class="menu-item" href="../contact.php">Contact</a>
-                        </li>
-                    </ul>
-                </div>
-            </nav>
-        </header>
-        <main class="row">
-            <section class="portfolio-sect small-10 medium-9 large-10 small small-centered column ">
-                <div class="portfolio-p ">
-                    <p>
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-                    </p>
-                </div>
-                <a href="prev-portfolio/index.html" target="_blank">
-                    <img class="portfolio-img" src="../css/img/portfolio-v1.png" alt="My First Portfolio."/>
+    <!-- Compressed CSS -->
+    <link rel="stylesheet" href="../foundation/css/foundation.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600" rel="stylesheet">
+    <!--   Custom Css -->
+    <link rel="stylesheet" type="text/css" href="../css/stylesheets/custom.css">
+</head>
+
+<body>
+    <header>
+        <nav role="navigation" class="row">
+            <div class="small-12 medium-6 large-3 columns">
+                <a href="../index.html">
+                    <img id="logo-img" src="https://s3-us-west-2.amazonaws.com/portfolio-hannahdroe/Portfolio/logo.svg" alt="Logo" />
                 </a>
-            </section>
-        </main>
-    </body>
+            </div>
+
+            <div class="small-12 medium-6 large-6 columns">
+                <ul class="vertical medium-horizontal menu ">
+                    <li>
+                        <a class="menu-item" href="../index.html">Portfolio</a>
+                    </li>
+                    <li>
+                        <a class="menu-item" href="../about.html">About</a>
+                    </li>
+                    <li>
+                        <a class="menu-item" href="../contact.php">Contact</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+    </header>
+    <main class="row">
+        <section class="portfolio-sect small-10 medium-9 large-10 small small-centered column ">
+            <div class="portfolio-p ">
+                <h3 class="portfolio-header">Previous Portfolio</h3>
+                <p>
+                    My first portfolio built primarily with HTML and CSS. Using Angular 1 for form validation and mobile navigation menu. Contact form uses PHP. The CSS is generated from Sass. Images and PDFs are hosted on AWS. Also, Google Analytics is included throughout
+                    to track traffic.
+                </p>
+
+                <span class="fa fa-github portfolio-icon" aria-hidden="true"></span>
+                <a class="github-link portfolio-link" href="https://github.com/HannahDRoe/Portfolio-1">Code on Github</a>
+            </div>
+            <a href="prev-portfolio/index.html" target="_blank">
+                <img class="portfolio-img" src="https://s3-us-west-2.amazonaws.com/portfolio-hannahdroe/Portfolio/portfolio-v1-min.png" alt="My First Portfolio." title="Click for Full Site" />
+            </a>
+        </section>
+    </main>
+    <footer class="social-footer ">
+        <a href="https://www.linkedin.com/in/hannahdroe" class="fa fa-linkedin fa-2x social-circles" target="_blank"></a>
+        <a href="http://www.github.com/HannahDRoe" class="fa fa-github fa-2x social-circles" target="_blank"></a>
+        <a href="contact.php" class="fa fa-envelope fa-2x social-circles" target="_blank"></a>
+    </footer>
+    <!-- Javascript  -->
+    <script type="text/javascript"   src="https://code.jquery.com/jquery-2.2.4.min.js"   integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="   crossorigin="anonymous"></script>
+    <script type="text/javascript" src="../foundation/js/vendor/foundation.min.js"></script>
+    <script type="text/javascript" src="../foundation/js/app.js">
+    </script>
+    <script type="text/javascript" src="../js/google-analytics.js"></script>
+</body>
+
 </html>
