Some finishing touches. Addition of social footer on all pages.

--- a/index.html
+++ b/index.html
@@ -1,114 +1,125 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Hannah Roe</title>
-        <link rel="shortcut icon" href="css/img/favicon.ico">
+<html lang="en">
 
-        <!-- Compressed CSS -->
-        <link rel="stylesheet" href="foundation/css/foundation.min.css">
-        <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600" rel="stylesheet">
-        <!--   Custom Css -->
-        <link rel="stylesheet" type="text/css" href="css/stylesheets/custom.css">
-    </head>
-    <body>
-        <header>
-            <nav role="navigation" class="row">
-                <div class="small-12 medium-6 large-3 columns">
-                    <a href="index.html"><img id="logo-img" src="css/img/better.svg" alt="Logo" /></a>
-                </div>
-                <div class="small-12 medium-6 large-6 columns">
-                    <ul class="vertical medium-horizontal menu">
-                        <li>
-                            <a class="menu-item" href="index.html">Portfolio</a>
-                        </li>
-                        <li>
-                            <a class="menu-item" href="about.html">About</a>
-                        </li>
-                        <li>
-                            <a class="menu-item" href="contact.php">Contact</a>
-                        </li>
-                    </ul>
-                </div>
-            </nav>
-        </header>
-        <main>
-            <!-- Snippet at the top about me -->
-            <div id="brief-p" class="row">
-                <p class="small-12 medium-9 large-8 columns small-centered medium-centered large-centered">
-                    Hannah Roe is a Web Developer in the Salt Lake City area.
-                </p>
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Hannah Roe</title>
+    <link rel="shortcut icon" href="https://s3-us-west-2.amazonaws.com/portfolio-hannahdroe/Portfolio/favicon.ico">
+
+    <!-- Compressed CSS -->
+    <link rel="stylesheet" href="foundation/css/foundation.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600" rel="stylesheet">
+    <!--   Custom Css -->
+    <link rel="stylesheet" type="text/css" href="css/stylesheets/custom.css">
+</head>
+
+<body>
+    <header>
+        <nav role="navigation" class="row">
+            <div class="small-12 medium-6 large-3 columns">
+                <a href="index.html"><img id="logo-img" src="https://s3-us-west-2.amazonaws.com/portfolio-hannahdroe/Portfolio/logo.svg" alt="Logo" /></a>
             </div>
-            <div id="block-container" class="row">
-                <div class="row small-up-1 medium-up-2 large-up-3">
-                    <!-- Work Block 1 -->
-                    <!-- Landing Page -->
-                    <div class="column">
-                        <div class="work-blocks">
-                            <a href="portfolio/landing-mockup.html">
-                                <img class="work-img" src="css/img/Landing-page.png" alt="Mock up of a one page website and most recient" />
-                                <p class="work-hidden-p">
-                                    Landing Page Mockup
-                                </p>
-                                <p class="show-for-sr">
-                                    Landing Page Mockup
-                                </p>
-                            </a>
-                        </div>
+            <div class="small-12 medium-6 large-6 columns">
+                <ul class="vertical medium-horizontal menu">
+                    <li>
+                        <a class="menu-item" href="index.html">Portfolio</a>
+                    </li>
+                    <li>
+                        <a class="menu-item" href="about.html">About</a>
+                    </li>
+                    <li>
+                        <a class="menu-item" href="contact.php">Contact</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+    </header>
+    <main>
+        <!-- Snippet at the top about me -->
+        <div id="brief-p" class="row">
+            <p class="small-12 medium-9 large-8 columns small-centered medium-centered large-centered">
+                Hannah Roe is a Web Developer in the Salt Lake City area. Creating responsive, delightful, web experiences using HTML, CSS, and Javascript.
+            </p>
+        </div>
+        <div id="block-container" class="row">
+            <div class="row small-up-1 medium-up-2 large-up-3">
+                <!-- Work Block 1 -->
+                <!-- Landing Page -->
+                <div class="column">
+                    <div class="work-blocks">
+                        <a href="portfolio/landing-mockup.html">
+                            <img class="work-img" src="https://s3-us-west-2.amazonaws.com/portfolio-hannahdroe/Portfolio/landing-page-min.png" alt="Mock up of a one page website and most recient" />
+                            <p class="work-hidden-p">
+                                Landing Page Mockup
+                            </p>
+                            <p class="show-for-sr">
+                                Landing Page Mockup
+                            </p>
+                        </a>
                     </div>
-                    <!-- Work Block 2 -->
-                    <!-- Old portfolio -->
-                    <div class="column">
-                        <div class="work-blocks">
-                            <a href="portfolio/prev-portfolio.html">
-                                <img class="work-img" id="portfolio-img" src="css/img/portfolio-v1.png" alt="My First Portfolio." />
-                                <p class="work-hidden-p">
-                                    Previous Portfolio
-                                </p>
-                                <p class="show-for-sr">
-                                    Previous Portfolio
-                                </p>
-                            </a>
-                        </div>
+                </div>
+                <!-- Work Block 2 -->
+                <!-- Old portfolio -->
+                <div class="column">
+                    <div class="work-blocks">
+                        <a href="portfolio/prev-portfolio.html">
+                            <img class="work-img" id="portfolio-img" src="https://s3-us-west-2.amazonaws.com/portfolio-hannahdroe/Portfolio/portfolio-v1-min.png" alt="My First Portfolio." />
+                            <p class="work-hidden-p">
+                                Previous Portfolio
+                            </p>
+                            <p class="show-for-sr">
+                                Previous Portfolio
+                            </p>
+                        </a>
                     </div>
-                    <!-- Work Block 3 -->
-                    <!-- Coffee shop -->
-                    <div class="column">
-                        <div class="work-blocks">
-                            <a href="portfolio/coffee-site.html">
-                                <img class="work-img" src="css/img/CoffeeShop.png" alt="My First Website I ever made." />
-                                <p class="work-hidden-p">
-                                    Coffee Shop Website
-                                </p>
-                                <p class="show-for-sr">
-                                    Coffee Shop Website
-                                </p>
-                            </a>
-                        </div>
+                </div>
+                <!-- Work Block 3 -->
+                <!-- Coffee shop -->
+                <div class="column">
+                    <div class="work-blocks">
+                        <a href="portfolio/coffee-site.html">
+                            <img class="work-img" src="https://s3-us-west-2.amazonaws.com/portfolio-hannahdroe/Portfolio/CoffeeShop-min.png" alt="My First Website I ever made." />
+                            <p class="work-hidden-p">
+                                Coffee Shop Website
+                            </p>
+                            <p class="show-for-sr">
+                                Coffee Shop Website
+                            </p>
+                        </a>
                     </div>
-                    <!-- Work Block 4 -->
-                    <!-- Weather app -->
-                    <div class="large-12 large-offset-4 column">
-                        <div class="work-blocks">
-                            <a href="portfolio/weather-app.html">
-                                <img class="work-img" src="css/img/weather-app.png" alt="Weather App Project" />
-                                <p class="work-hidden-p">
-                                    Weather App
-                                </p>
-                                <p class="show-for-sr">
-                                    Weather App
-                                </p>
-                            </a>
-                        </div>
+                </div>
+                <!-- Work Block 4 -->
+                <!-- Weather app -->
+                <div class="large-12 large-offset-4 column">
+                    <div class="work-blocks">
+                        <a href="portfolio/weather-app.html">
+                            <img class="work-img" src="https://s3-us-west-2.amazonaws.com/portfolio-hannahdroe/Portfolio/weather-app-min.png" alt="Weather App Project" />
+                            <p class="work-hidden-p">
+                                Weather App
+                            </p>
+                            <p class="show-for-sr">
+                                Weather App
+                            </p>
+                        </a>
                     </div>
-
                 </div>
 
             </div>
-        </main>
-        <!-- Javascript  -->
-        <script type="text/javascript" src="foundation/js/vendor/jquery.js"></script>
-        <script type="text/javascript" src="foundation/js/vendor/foundation.min.js"></script>
-    </body>
+
+        </div>
+
+    </main>
+    <footer class="social-footer ">
+        <a href="https://www.linkedin.com/in/hannahdroe" class="fa fa-linkedin fa-2x social-circles" target="_blank" alt="Go to my LinkedIn profile"></a>
+        <a href="http://www.github.com/HannahDRoe" class="fa fa-github fa-2x social-circles" target="_blank" alt="See My Repositories on Github"></a>
+        <a href="contact.php" class="fa fa-envelope fa-2x social-circles" target="_blank" alt="Send Me a Message!"></a>
+    </footer>
+    <!-- Javascript  -->
+    <script type="text/javascript"   src="https://code.jquery.com/jquery-2.2.4.min.js"   integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="   crossorigin="anonymous"></script>
+    <script type="text/javascript" src="foundation/js/vendor/foundation.min.js"></script>
+    <script type="text/javascript" src="foundation/js/app.js"></script>
+    <script type="text/javascript" src="js/google-analytics.js"></script>
+</body>
+
 </html>
