--- a/index.html
+++ b/index.html
@@ -45,6 +45,21 @@
         <div id="block-container" class="row">
             <div class="row small-up-1 medium-up-2 large-up-3">
                 <!-- Work Block 1 -->
+                <!-- Upcoming Project -->
+                <div class="column">
+                    <div class="work-blocks">
+                        <a href="portfolio/upcoming.html">
+                            <img class="work-img" src="https://s3-us-west-2.amazonaws.com/portfolio-hannahdroe/Portfolio/react.svg" alt="My next project is going to be using React js" />
+                            <p class="work-hidden-p">
+                                Upcoming Project &amp; <br> Current Learning Path
+                            </p>
+                            <p class="show-for-sr">
+                                Upcoming Project
+                            </p>
+                        </a>
+                    </div>
+                </div>
+                <!-- Work Block 2 -->
                 <!-- Landing Page -->
                 <div class="column">
                     <div class="work-blocks">
@@ -59,7 +74,7 @@
                         </a>
                     </div>
                 </div>
-                <!-- Work Block 2 -->
+                <!-- Work Block 3 -->
                 <!-- Old portfolio -->
                 <div class="column">
                     <div class="work-blocks">
@@ -74,10 +89,10 @@
                         </a>
                     </div>
                 </div>
-                <!-- Work Block 3 -->
+                <!-- Work Block 4 -->
                 <!-- Coffee shop -->
                 <div class="column">
-                    <div class="work-blocks">
+                    <div class="work-blocks large-12 large-offset-3 column">
                         <a href="portfolio/coffee-site.html">
                             <img class="work-img" src="https://s3-us-west-2.amazonaws.com/portfolio-hannahdroe/Portfolio/CoffeeShop-min.png" alt="My First Website I ever made." />
                             <p class="work-hidden-p">
@@ -89,9 +104,9 @@
                         </a>
                     </div>
                 </div>
-                <!-- Work Block 4 -->
+                <!-- Work Block 5 -->
                 <!-- Weather app -->
-                <div class="large-12 large-offset-4 column">
+                <div class="large-12 medium-offset-3 column">
                     <div class="work-blocks">
                         <a href="portfolio/weather-app.html">
                             <img class="work-img" src="https://s3-us-west-2.amazonaws.com/portfolio-hannahdroe/Portfolio/weather-app-min.png" alt="Weather App Project" />
