updated resume link and about section

--- a/about.html
+++ b/about.html
@@ -38,12 +38,12 @@
     <main class="row">
         <article class="small-10 medium-9 large-10 small small-centered column ">
             <p id="about-p">
-                Hannah Roe is a pretty cool person.
-                <br> She aspires to become an amazing web developer, as well as be a part of a team that does pretty neat stuff too. She's studied up on HTML, CSS, Javascript, and lots of other stuff like jQuery, Angular, PHP, Sass, Foundation, Bootstrap,
-                Github, SourceTree, Atom io, and Sublime Text. She values an organized process, a quick wit, and empathetic design and code.
+                Hannah Roe is a Web Developer based in the Denver area.
+                <br> She aspires to become a part of a great team to make some awesome things. She is well versed in HTML, CSS/Sass, Javascript(ES6 and beyond) and Git. 
+                She also has experience with React, Redux, jQuery, and various build tools such as Webpack and Grunt. She values an organized process, a quick wit, and empathetic design and code.
             </p>
             <div id="resume">
-                <a href="https://s3-us-west-2.amazonaws.com/portfolio-hannahdroe/hannah_roe_resume.pdf" class="portfolio-link" alt="Link to Resume" target="_blank">View Resume</a>
+                <a href="https://s3-us-west-2.amazonaws.com/portfolio-hannahdroe/Hannah-Roe-Resume-FrontEndDev.pdf" class="portfolio-link" alt="Link to Resume" target="_blank">View Resume</a>
             </div>
 
         </article>
