--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <!-- Snippet at the top about me -->
         <div id="brief-p" class="row">
             <p class="small-12 medium-9 large-8 columns small-centered medium-centered large-centered">
-                Hannah Roe is a Web Developer in the Salt Lake City area. Creating responsive, delightful, web experiences using HTML, CSS, and Javascript.
+                Hannah Roe is a Web Developer in the Denver area. Creating responsive, delightful, web experiences using HTML, CSS, and Javascript.
             </p>
         </div>
         <div id="block-container" class="row">
