updated current learning path

--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
                         <a href="portfolio/upcoming.html">
                             <img class="work-img" src="https://s3-us-west-2.amazonaws.com/portfolio-hannahdroe/Portfolio/react.svg" alt="My next project is going to be using React js" />
                             <p class="work-hidden-p">
-                                Upcoming Project &amp; <br> Current Learning Path
+                               Current Learning Path
                             </p>
                             <p class="show-for-sr">
-                                Upcoming Project
+                                Current Learning Path
                             </p>
                         </a>
                     </div>
