--- a/portfolio/upcoming.html
+++ b/portfolio/upcoming.html
@@ -41,13 +41,12 @@
     <main class="row">
         <section class="portfolio-sect small-10 medium-9 large-10 small small-centered column ">
             <div class="portfolio-p ">
-                <h3 class="portfolio-header">Upcoming Project &amp; <br> Current Learning</h3>
+                <h3 class="portfolio-header">Current Learning Path</h3>
                 <p>
-                    Learning new things is what I do and currently I'm hitting the books and studying up mainly on React and Redux. I'm also learning to use Node.js, Webpack, as well as Java.
+                    I am always learning and keeping up with the newest technologies. I'm currently learning Node, Express, and testing with Jest. Please take a look at my <a href="https://github.com/HannahDRoe">GitHub</a>
+                    for my most current work.
                 </p>
-                <p>
-                    The project I've come up with is a super awesome burrito maker that will allow you to filter out ingredient options in a couple of ways, as well as serve up the calorie count from all the fixin's you've put on.
-                </p>
+               
             </div>
 
         </section>
